...
    <string name="emailHint">abc@email.com</string>
    <string name="passwordHint">Your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="googleSignUpText">Sign up with Google</string>
    <string name="XSignUpText">Sign up with X</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continueButton">CONTINUE</string>


    <string-array name="gender_options">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
...
